# todo-list

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
database/: tasks.sqlite3
migrations/2019-12-22-101125_create_tasks/: up.sql
src/: main.rs
static/: index.html
static/css/: mystyle.css
static/js/: myscripts.js
templates/: index.hbs
